[gd_scene load_steps=25 format=3 uid="uid://dt7j7wrkm7l52"]

[ext_resource type="Script" uid="uid://da4tj8x72ic1q" path="res://scripts/player.gd" id="1_3j5lm"]
[ext_resource type="Texture2D" uid="uid://b37lyoxa3ievd" path="res://AssestBundle/Sprites/Foxy.png" id="1_hqvp4"]
[ext_resource type="PackedScene" uid="uid://k1u8vcrftu5j" path="res://scences/bullet.tscn" id="2_efpdg"]
[ext_resource type="AudioStream" uid="uid://4dc51twlwqi7" path="res://AssestBundle/Audio/Gun.mp3" id="4_u4p4d"]
[ext_resource type="AudioStream" uid="uid://b607k4uklaf56" path="res://AssestBundle/Audio/GameOver.mp3" id="5_7khn4"]
[ext_resource type="AudioStream" uid="uid://baa6mq0ubko26" path="res://AssestBundle/Audio/Running.mp3" id="6_7xwe5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_mllt6"]
atlas = ExtResource("1_hqvp4")
region = Rect2(0, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lowl5"]
atlas = ExtResource("1_hqvp4")
region = Rect2(33, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8tx1"]
atlas = ExtResource("1_hqvp4")
region = Rect2(66, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_08bsj"]
atlas = ExtResource("1_hqvp4")
region = Rect2(99, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eubhq"]
atlas = ExtResource("1_hqvp4")
region = Rect2(132, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8le08"]
atlas = ExtResource("1_hqvp4")
region = Rect2(165, 256, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j5lm"]
atlas = ExtResource("1_hqvp4")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efpdg"]
atlas = ExtResource("1_hqvp4")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4p4d"]
atlas = ExtResource("1_hqvp4")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7khn4"]
atlas = ExtResource("1_hqvp4")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xwe5"]
atlas = ExtResource("1_hqvp4")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0v3o"]
atlas = ExtResource("1_hqvp4")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwok8"]
atlas = ExtResource("1_hqvp4")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_641ry"]
atlas = ExtResource("1_hqvp4")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4ay6"]
atlas = ExtResource("1_hqvp4")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqdch"]
atlas = ExtResource("1_hqvp4")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7xwe5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mllt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lowl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8tx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08bsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eubhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8le08")
}],
"loop": true,
"name": &"died",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j5lm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efpdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4p4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7khn4")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xwe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0v3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwok8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_641ry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4ay6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqdch")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3j5lm"]

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("animater")]
script = ExtResource("1_3j5lm")
animater = NodePath("AnimatedSprite2D")
bullet_scence = ExtResource("2_efpdg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7xwe5")
animation = &"idle"
frame_progress = 0.12701

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_3j5lm")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="gunAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_u4p4d")
volume_db = 8.0

[node name="deadAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_7khn4")
volume_db = 12.0

[node name="runningAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7xwe5")
volume_db = 12.0

[node name="resetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="on_fire"]
[connection signal="timeout" from="resetTimer" to="." method="reload_scene"]
